# EWII

./: README.md  app.py  package-lock.json  pyproject.toml  tailwind.config.js
EWII_BI_DASHBOARD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assets/: tailwind.css
chat/: chat_log.json
components/: gpt.py  navbar.py
data/: Churn_feb_2025.xlsx  Churn_nov_2024.xlsx
data/percent_internet_option/: analyze_internet.py  internet_distribution_2024.csv  internet_distribution_2024.json  internet_distribution_2025.csv  internet_distribution_2025.json
database/: conection.py  creation.py  queries.py
pages/: Active_Feb_2025.py  Active_Nov_2024.py  Churn_Feb_2025.py  Churn_Nov_2024.py  Individ_Feb_2025.py  Individ_Nov_2024.py  home.py  oversigt.py
src/EWII_BI_DASHBOARD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/css/: output.css
